--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             </div>
         </div>
     </nav>
+    <div id="message">
+        
+    </div>
     <div class="container my-3" style="width: 60%;">
         <h1>Anand Library</h1>
         <hr>
@@ -94,7 +97,7 @@
             </tbody>
         </table>
     </div>
-    <script src="app.js/script.js"></script>
+    <script src="app.js/scriptES6.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
